Some improvement to the homepage in ie6, removed overlap between images, still having a sizing issue with the login box, it is a few px too tall

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -185,7 +185,7 @@ textarea {
 }
 
 #main_content {
-  padding: 1em 5px 5px 5px;
+  padding: 5px;
 }
 
 #main_content.with_side_bar {
@@ -226,22 +226,15 @@ textarea {
 /* Front Page */
 
 div#banner {
-  margin: -1em -5px 0 -5px;
+  margin: -5px;
   overflow: hidden;
 }
 
 div#banner img {
-  border: 0;
-  padding: 0;
-  margin: 0;
   float: left;
 }
 
-div#banner #top_banner, div#banner #bottom_banner {
-  line-height: 0;
-}
-
-div#banner div#login {
+div#login {
   background: url('../images/banner_login.jpg') no-repeat right;
   height: 170px;
   color: #88ccff;
